--- a/task4.html
+++ b/task4.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="icon" href="me2.jpg" >
+    <link rel="icon" href="myphoto.jpg" >
     <link rel="stylesheet" href="task4.css">
     <title>Vedvart Yadav</title>
 </head>
@@ -40,7 +40,7 @@
                 <a href="#" class="btn">Download CV</a>
           </div>
           <div class="home-img">
-              <img src="me2.jpg" alt="home-img">
+              <img src="myphoto.jpg" alt="home-img">
           </div>
        </section>
   
